--- a/index.html
+++ b/index.html
@@ -495,6 +495,9 @@
         </div>
         <div class="big-box">
             <div class="closeee">X</div>
+            <div class="zoom"><i class="fa-solid fa-magnifying-glass"></i></div>
+            <div class="leftleft"><i class="fa-solid fa-caret-left"></i></div>
+            <div class="rightright"><i class="fa-solid fa-caret-right"></i></div>
         </div>
     </div>
 
@@ -659,7 +662,6 @@
                 <div id="chk">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
                     there live
                     the blind texts.</div>
-
             </div>
 
 
