--- a/index.html
+++ b/index.html
@@ -318,7 +318,6 @@
 
     <div class="pricing">
         <div class="table">
-
             <p class="pow"><i class="fa-solid fa-paw"></i>&nbsp;<span><i class="fa-solid fa-paw"></i></span>&nbsp;<i
                     class="fa-solid fa-paw"></i>
             </p>
@@ -480,8 +479,8 @@
 
     <div class="photo">
         <div class="gallery">
-            <div class="photos" id="p1"></div>
-            <div class="photos" id="p2"></div>
+            <div class="photos" id="p1two"></div>
+            <div class="photos" id="p2one"></div>
             <div class="photos" id="p3"></div>
             <div class="photos" id="p4"></div>
             <div class="photos" id="p5"></div>
@@ -756,9 +755,7 @@
     <!-- last page -->
 
     <div class="lastt">
-
         <div class="darkkkk">
-
             <div class="last last1">
                 <div class="ipsum1">About Us</div>
                 <div class="ipsum2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facere laudantium
